@@ -1,3 +1,5 @@
+This project is part of [FIWARE](https://www.fiware.org/).
+
 IoT Broker
 ===========
 
@@ -5,22 +7,31 @@ IoT Broker is the FIWARE reference implementation by the IoT Broker Generic Enab
 
 The IoT Broker is an Internet-of-Things middleware based on the FIWARE NGSI standard. It is provided by NEC Laboratories Europe as part of their contribution to the European Future Internet Platform FIWARE.
 
-IoT Broker Documentation
+IoT Broker References
 ---
 
-| Document                    | Reference                                                                                                        |
-| --------------------------- | ---------------------------------------------------------------------------------------------------------------- |
-| FIWARE wiki                 | https://forge.fi-ware.org/plugins/mediawiki/wiki/fiware/index.php/Main_Page                                      |
-| IoT Broker GE specification | https://forge.fi-ware.org/plugins/mediawiki/wiki/fiware/index.php/FIWARE.OpenSpecification.IoT.Backend.IoTBroker |
-| FIWARE NGSI API specification | https://forge.fi-ware.org/plugins/mediawiki/wiki/fiware/index.php/FI-WARE_NGSI_Open_RESTful_API_Specification    |
-| IoT Broker in FIWARE catalogue   | http://catalogue.fiware.org/enablers/iot-broker                                                             |
+| Document                    | Reference                                                                                                        | Contents |
+| --------------------------- | ---------------------------------------------------- | -------------------------------------------|
+| This file | README.md | How to compile and run the IoT Broker. |
+| FIWARE wiki                 | https://forge.fi-ware.org/plugins/mediawiki/wiki/fiware/index.php/Main_Page                                      | Generic wiki about the FIWARE project and platform. |
+| IoT Broker GE specification | https://forge.fi-ware.org/plugins/mediawiki/wiki/fiware/index.php/FIWARE.OpenSpecification.IoT.Backend.IoTBroker | Specification of IoT Broker Generic Enabler, including information about its role in the FIWARE Intenet-of-Things architecture, functionalities, and data flows.|
+| IoT Broker API specification | http://aeronbroker.github.io/Aeron/    | Specification of the FIWARE NGSI-10 API exposed by the IoT Broker.  |
+| FIWARE NGSI API specification | https://forge.fi-ware.org/plugins/mediawiki/wiki/fiware/index.php/FI-WARE_NGSI_Open_RESTful_API_Specification    | Specificaton of the FIWARE NGSI API, which is the interface exposed by the IoT Broker and many other FIWARE enablers.  |
+|IoT Broker Installation and Administration guide| [doc/installadminguide](./doc/installadminguide) | Installation and administration guide for IoT Broker.
+|IoT Broker User and Programmer Guide| https://forge.fiware.org/plugins/mediawiki/wiki/fiware/index.php/IoT_Broker_-_User_and_Programmers_Guide | Guide showing some toy interactions with the IoT Broker. |
+|IoT Broker extension point documentation| [doc/extensionpoint.md](./doc/extensionpoint.md) | Documentation on how to write and use plugins for additional data source types. |
+|Entity composition guide| [eu.neclab.iotplatform.entitycomposer/README.MD](./eu.neclab.iotplatform.entitycomposer/README.MD) | Documentation on how to use the IoT Broker to compose entities from other entities. |
+|History Queries| [doc/historyqueries.md](./doc/historyqueries.md) | Documentation on history queries on the IoT Broker. |
+|IoT Broker on DockerHub | https://hub.docker.com/r/fiware/iotbroker/ | DockerHub Repository for IoT Broker docker image |
+| IoT Broker in FIWARE catalogue   | http://catalogue.fiware.org/enablers/iot-broker                                                             | Access to IoT Broker binaries and images. |
+| NEC ConfMan   | https://github.com/Aeronbroker/NEConfMan| NEC implementation of FIWARE IoT Discovery GE. |
 
 
 What you get
 ---
 
 IoT Broker is an implementation of the IoT Broker Generic Enabler from FIWARE (http://catalogue.fiware.org/enablers/iot-broker). 
-It is specified as a lightweight and scalable middleware component that separates IoT applications from the underlying device installations. 
+It is designed as a lightweight and scalable middleware component that separates IoT applications from the underlying device installations. 
 This implementation satisfies all properties described in the specification of the FIWARE Generic Enabler (https://forge.fi-ware.org/plugins/mediawiki/wiki/fiware/index.php/FIWARE.OpenSpecification.IoT.Backend.IoTBroker).
 
 The IoT Broker has unique properties that you will not find in other IoT Platforms:
@@ -29,8 +40,8 @@ The IoT Broker has unique properties that you will not find in other IoT Platfor
 common publish/subscribe paradigm. Instead, the IoT Broker actively communicates simultaneously with multiple IoT gateways 
 and devices in order to obtain exactly the information that is required by the running IoT applications. 
 As a result, information only is generated and exchanged when needed. This is in contrast to the state-of-the-art 
-middleware components where any piece of information - whether needed or not - is just ''dumped'' inside a central 
-repository.
+middleware components where any piece of information - whether needed or not - is stored inside a central 
+repository (which is still available as an optional component of the IoT Broker).
 * The IoT Broker has the ability to automatically translate information to the right abstraction level and therefore closes the 
 gap between information-centric applications and device-centric IoT installations. 
 For example, a simple device can typically only deliver values without being aware of the meaning of these values 
@@ -59,48 +70,35 @@ The main features of IoT Broker are:
 
 Directory Structure
 ------------------------
-.
 
-├── iotplatform.couchdb				     Optional bundle for
-                                         connection with 
-										 couchDB
+Most of the below sub-directories are containing source code for OSGi bundles the IoT Broker 
+runs with. Some of these bundles are required for a working installation of IoT Broker; others
+are implementing optional features and do not need to be deployed when these features are not 
+needed. In addition, this repository also contains an OSGi runtime environment and pre-configured
+startup script for the IoT Broker, as well as a blackbox test utility for testing a running IoT Broker
+instance.
 
-├── iotbroker.builder                    Maven builder
-
-├── iotbroker.client                     HTTP client
-
-├── iotbroker.commons                    Commons package for 
-                                         basic functionalities
-
-├── iotbroker.core                       Functional core
-
-├── iotbroker.resultfilter               Optional bundle for 
-                                         filtering results
-
-├── iotbroker.restcontroller             HTTP REST interface
-
-├── iotbroker.storage                    Connector to internal 	  	
-									     database
-
-├── ngsi.api                             Implementation of 
-                                         FIWARE NGSI API
-										 
-├── fiwareRelease                        Configuration folder
-										 used by IoT Broker
-										 bundles during 
-										 runtime
-
-├── IoTbrokerParent                      Maven parent project
-
-├── lib								     Folder contains OSGI
-										 bundles needed by
-										 IoT Broker to run
-
-├── SQL_database                         HSQLDB folder containing
-										 the internal IoT Broker
-										 database files.
-
-└── tomcat-configuration-fragment 		 Tomcat server configuration
+|Directory            | Contents|
+|---------------------|---------|
+| ├── eu.neclab.iotplatform.couchdb		|	 Optional bundle for connection with a couchDB database for storing and retrieving context information.|										
+| ├── eu.neclab.iotplatform.entitycomposer |	Optional bundle for connection with a couchDB database for storing and retrieving context information. |
+|├── eu.neclab.iotplatform.iotbroker.builder | Maven builder project compiling all required and optional IoT Broker OSGi bundles.|
+|├── eu.neclab.iotplatform.iotbroker.client | Required bundle for the HTTP client used by IoT Broker. |
+|├── eu.neclab.iotplatform.iotbroker.commons | Required bundle for basic IoT Broker functionalities. |
+|├── eu.neclab.iotplatform.iotbroker.core | Required bundle containing the functional core of the IoT Broker. |
+|├── eu.neclab.iotplatform.iotbroker.ext.resultfilter |Optional bundle for filtering results. Deploying this bundle  will effectuate that faulty query responses from IoT data sources are not forwarded to IoT applications.|
+|├── eu.neclab.iotplatform.iotbroker.restcontroller | Required bundle implementing the HTTP REST interface of the IoT Broker.|
+|├── eu.neclab.iotplatform.iotbroker.storage | Required bundle to setup and connect to an internal database. Note that this	database only used to store state information on data subscriptions and does not store any context data. For storing context data, please use the optional bundle eu.neclab.iotplatform.couchdb.|
+|├── eu.neclab.iotplatform.ngsi.api | Required bundle containing the libraries implementing the FIWARE NGSI data model.|
+|├── fiwareRelease | Configuration folder used by IoT Broker bundles at runtime. This folder is referenced by the runtime environment in the "IoTBroker-runner" folder.|			 
+| ├── IoTbrokerParent |Maven parent project.|
+|├── IoTBroker-runner | Pre-configured runtime environment for IoT Broker, based on the Equinox OSGi implementation.|
+|├── iotplatform.iotbroker.blackboxtest | Maven project for a blackbox test based on JUNIT. This can be used to test a running instance of IoT Broker. The tests require the running instance to include some optional bundles included by this release.|
+|├── lib |Folder contains some OSGI bundles needed by IoT Broker to run.|
+|├── puppet |Puppet scripts for installing, starting, stopping, and uninstalling the IoT Broker.|
+|├── SQL_database | HSQLDB folder containing internal IoT Broker database files.|
+|├── targetPlatform| Contains the OSGi bundles needed for the IoT Broker at runtime. These bundles are pre-configured to be loaded by the runtime environment in the "IoTBroker-runner" folder.|
+|└── tomcat-configuration-fragment | Required bundle for tomcat server configuration.|
 
 
 Building IoT Broker Source Code
@@ -114,186 +112,89 @@ for being built:
 
 The basic procedure for compiling the IoT Broker is the following:
 
-Navigate into the IoTBrokerParent folder and compile the pom file as follows:
+**Build the parent:** Navigate into the IoTBrokerParent folder and compile the pom file as follows:
 
 ```
 mvn install
 ```
 
-* The next step is to build the IoT Broker. Navigate into the eu.neclab.iotplatform.iotbroker.builder folder and use Maven for compiling the pom file:
+**Build the IoT broker bundles:** Navigate into the eu.neclab.iotplatform.iotbroker.builder folder and use Maven for compiling the pom file:
 
 ```
 mvn install
 ```
 
-  This command will generate 9 OSGI bundles inside the eu.neclab.iotplatform.iotbroker.builder\target folder:
+  This command will generate 10 OSGI bundles inside the *eu.neclab.iotplatform.iotbroker.builder\target* folder:
   
   (Note that the version numbers might differ from what is
   written in this document.)
 
 ```
-iotbroker.client-4.3.3.jar
-iotbroker.commons-4.3.3.jar
-iotbroker.core-4.3.3.jar
-iotbroker.couchdb-4.3.3.jar
-iotbroker.ext.resultfilter-4.3.3.jar
-iotbroker.restcontroller-4.3.3.jar
-iotbroker.storage-4.3.3.jar
-ngsi.api-4.3.3.jar
-tomcat-configuration-fragment-4.3.3.jar
+entitycomposer-4.4.3.jar
+iotbroker.client-4.4.3.jar
+iotbroker.commons-4.4.3.jar
+iotbroker.core-4.4.3.jar
+iotbroker.couchdb-4.4.3.jar
+iotbroker.ext.resultfilter-4.4.3.jar
+iotbroker.restcontroller-4.4.3.jar
+iotbroker.storage-4.4.3.jar
+ngsi.api-4.4.3.jar
+tomcat-configuration-fragment-4.4.3.jar
 ```
 
-How to Use the IoT Broker Bundles
+How to Use the IoT Broker Bundles in general
 ---
 
 The Iot Broker bundles are OSGI based and can be used with arbitrary OSGI frameworks like EQUINOX, FELIX, etc.
 The IoT Broker OSGI bundles have been tested with the EQUINOX and the FELIX framework.
 IoT Broker requires several VM arguments for the runtime that need to be specified (e.g. in Equinox modify the config.ini file):
 
-* dir.config=/user/home (parent directory of the fiwareRelease folder)
+* dir.config=/user/home (parent directory of the fiwareRelease folder (absolute path needed))
 * bundles.configuration.location=.//fiwareRelease//configuration//configadmin (Location of the
 logger configuration file)
 * ngsiclient.layer=connector (Needed for binding the right http bundle)
 * hsqldb.directory=.//SQL_database/database (Location of the HSQLDB database)
-* tomcat.init.port=8090 (the port the IoT Broker REST Interface will be listening to)
+* tomcat.init.port=80 (the port the IoT Broker REST Interface will be listening to)
 
-In addition to that, the fiwareRelease folder needs to be copied in the user/home directory (or to the folder specified by dir.config).
+In addition to that, the fiwareRelease folder needs to be copied e.g. into the user/home directory (or to the folder specified by dir.config).
 
-An example of an OSGI configuration using the EQUINOX framework (e.g. config.ini) is shown below. For a working example configuration please also see the latest binary release to be found in http://catalogue.fiware.org/enablers/iot-broker.
+For example of an OSGI configuration using the EQUINOX framework (e.g. config.ini), please refer to the *IoTBroker-runner* folder.
 
-One of the most simple ways to compile and run your custom version of IoT Broker is to (a) do the modifications of the source code as desired (b) compile the IoT Broker OSGi bundles, (c) replace in a recent binary release of IoT Broker (see http://catalogue.fiware.org/enablers/iot-broker) the IoT Broker bundles by your new custom bundles.
+Using the runtime environment included by this repository
+---
 
-```
-##############################
-# Equinox settings
-##############################
-eclipse.ignoreApp=true
-osgi.clean=true
-osgi.noShutdown=true
-osgi.bundles.defaultStartLevel=4
-osgi.java.profile=java6-server.profile
-osgi.java.profile.bootdelegation=override
-# PaxLogging configuration folder (absolute path)
-bundles.configuration.location=//root//IoTBroker_4.3.3//fiwareRelease//iotbrokerconfig//bundleConfigurations
-# IoT Broker Server port
-tomcat.init.port=80
-# Internal Database folder
-hsqldb.directory=.//SQL_database//database//linkDB
-# Internal Database port
-hsqldb.port=9001
-# Enable the Database Logs
-hsqldb.silent=false
-# Absolute path to the config folder
-dir.config=//root//IoTBroker_4.3.3//fiwareRelease//
-ngsiclient.layer=connector 
-java.awt.headless=true 
-file.encoding=UTF-8
--server -Xms2048m -Xmx2048m
--XX:NewSize=1024m -XX:MaxNewSize=1024m -XX:PermSize=1024m
--XX:MaxPermSize=1024m -XX:+DisableExplicitGC
-##############################
-# Client bundles to install
-##############################
-osgi.bundles= plugins/equinox/org.eclipse.core.contenttype-3.4.100.v20100505-1235.jar@start, \
-plugins/equinox/org.eclipse.equinox.common-3.6.0.v20110506.jar@2:start, \
-plugins/equinox/org.eclipse.core.jobs-3.5.0.v20100515.jar@start, \
-plugins/equinox/org.eclipse.equinox.app-1.3.0.v20100512.jar@start, \
-plugins/equinox/org.eclipse.equinox.preferences-3.3.0.v20100503.jar@start, \
-plugins/equinox/org.eclipse.equinox.registry-3.5.0.v20100503.jar@start, \
-plugins/equinox/org.eclipse.osgi.services-3.2.100.v20100503.jar@start, \
-plugins/equinox/org.eclipse.equinox.cm_3.2.0.v20070116.jar@1:start, \
-plugins/pax/pax-confman-propsloader-0.2.2.jar@2:start, \
-plugins/pax/pax-logging-api-1.7.0-20120710.130402-38.jar@2:start, \
-plugins/pax/pax-logging-service-1.7.0-20120710.130445-38.jar@2:start, \
-plugins/bundles/com.springsource.javax.activation-1.1.1.jar@start, \
-plugins/bundles/javax.persistence-2.0.0.jar@start, \
-plugins/bundles/httpclient-4.2.0-osgi.jar@start, \
-plugins/bundles/httpcore-4.2.0-osgi.jar@start, \
-plugins/bundles/com.springsource.org.apache.commons.io-1.4.0.jar, \
-plugins/bundles/com.springsource.org.apache.commons.codec-1.6.0.jar@start, \
-plugins/bundles/com.springsource.javax.annotation-1.0.0.jar@start, \
-plugins/bundles/com.springsource.javax.ejb-3.0.0.jar@start, \
-plugins/bundles/com.springsource.javax.el-1.0.0.jar@start, \
-plugins/bundles/com.springsource.javax.mail-1.4.0.jar@start, \
-plugins/bundles/com.springsource.javax.persistence-1.0.0.jar@start, \
-plugins/bundles/com.springsource.javax.servlet.jsp.jstl-1.1.2.jar@start, \
-plugins/bundles/com.springsource.javax.servlet.jsp-2.1.0.jar@start, \
-plugins/bundles/com.springsource.javax.servlet-2.5.0.jar@start, \
-plugins/bundles/com.springsource.javax.xml.bind-2.0.0.jar@start, \
-plugins/bundles/com.springsource.javax.xml.stream-1.0.1.jar@start, \
-plugins/bundles/com.springsource.javax.xml.rpc-1.1.0.jar@start, \
-plugins/bundles/com.springsource.javax.xml.soap-1.3.0.jar@start, \
-plugins/bundles/com.springsource.javax.xml.ws-2.1.1.jar@start, \
-plugins/bundles/com.springsource.org.aopalliance-1.0.0.jar@start, \
-plugins/bundles/com.springsource.org.apache.catalina-6.0.18.jar@start, \
-plugins/bundles/com.springsource.org.apache.coyote-6.0.18.jar, \
-plugins/bundles/com.springsource.org.apache.el-6.0.18.jar@start, \
-plugins/bundles/com.springsource.org.apache.juli.extras-6.0.18.jar@start, \
-plugins/bundles/com.springsource.org.apache.taglibs.standard-1.1.2.jar@start, \
-plugins/bundles/catalina.start.osgi-1.0.0.jar@start, \
-plugins/bundles/jasper.osgi-5.5.23-SNAPSHOT.jar@start, \
-plugins/bundles/catalina-config-3.5.1.jar, \
-plugins/jaxb/jaxb-impl-2.1.5_1.0.0.jar@start, \
-plugins/db/hsqldb_1.0.0.jar@start, \
-plugins/json/org.json_1.0.0.jar@start, \
-plugins/json/gson-2.2.2.jar@start, \
-plugins/json/jackson-core-asl-1.9.2.jar@start, \
-plugins/json/jackson-mapper-asl-1.9.2.jar@start, \
-plugins/spring 3.2.3/org.springframework.aop-3.2.3.RELEASE.jar@start, \
-plugins/spring 3.2.3/org.springframework.aspects-3.2.3.RELEASE.jar@start, \
-plugins/spring 3.2.3/org.springframework.beans-3.2.3.RELEASE.jar@start, \
-plugins/spring 3.2.3/org.springframework.context.support-3.2.3.RELEASE.jar@start, \
-plugins/spring 3.2.3/org.springframework.context-3.2.3.RELEASE.jar@start, \
-plugins/spring 3.2.3/org.springframework.core-3.2.3.RELEASE.jar@start, \
-plugins/spring 3.2.3/org.springframework.expression-3.2.3.RELEASE.jar@start, \
-plugins/spring 3.2.3/org.springframework.jdbc-3.2.3.RELEASE.jar@start, \
-plugins/spring 3.2.3/org.springframework.orm-3.2.3.RELEASE.jar@start, \
-plugins/spring 3.2.3/org.springframework.oxm-3.2.3.RELEASE.jar@start, \
-plugins/spring 3.2.3/org.springframework.transaction-3.2.3.RELEASE.jar@start, \
-plugins/spring 3.2.3/org.springframework.web.servlet-3.2.3.RELEASE.jar@start, \
-plugins/spring 3.2.3/org.springframework.web-3.2.3.RELEASE.jar@start, \
-plugins/spring 3.2.3/org.springframework.security.config-3.1.4.RELEASE.jar@start, \
-plugins/spring 3.2.3/org.springframework.security.core-3.1.4.RELEASE.jar@start, \
-plugins/spring 3.2.3/org.springframework.security.web-3.1.4.RELEASE.jar@start, \
-plugins/spring DM/spring-osgi-annotation-2.0.0.M1.jar@start, \
-plugins/spring DM/spring-osgi-core-2.0.0.M1.jar@start, \
-plugins/spring DM/spring-osgi-extender-2.0.0.M1.jar@start, \
-plugins/spring DM/spring-osgi-io-2.0.0.M1.jar@start, \
-plugins/spring DM/spring-osgi-web-2.0.0.M1.jar@start, \
-plugins/spring DM/spring-osgi-web-extender-2.0.0.M1.jar@start, \
-plugins/monitor/javamelodybundle_1.0.0.jar@start, \
-plugins/monitor/jrobin_1.5.9.1.jar@start, \
-plugins/bundles/guava-18.0.jar@start, \
-plugins/broker/iotbroker.commons-4.3.3.jar@start, \
-plugins/broker/iotbroker.storage-4.3.3.jar@start, \
-plugins/broker/iotbroker.client-4.3.3.jar@start, \
-plugins/broker/iotbroker.core-4.3.3.jar@start, \
-plugins/broker/iotbroker.restcontroller-4.3.3.jar@start, \
-plugins/broker/ngsi.api-4.3.3.jar@start, \
-plugins/broker/iotbroker.ext.resultfilter-4.3.3.jar@start, \
-plugins/broker/tomcat-configuration-fragment-4.3.3.jar, \
-plugins/broker/iotbroker.couchdb-4.3.3.jar@start
-```
+This repository contains a complete runtime environment for the IoT Broker. In the *IoTBroker-runner* folder you can find the Equinox OSGi environment together with its configuration file. The configuration files contains references the *fiwareRelease* folder, to the bundles in the *targetPlatform* folder, as well as to the IoT Broker bundles that can be found in the *eu.neclab.iotplatform.iotbroker.builder/target* folder after having successfully compiled the bundles.
 
-Installing and Using the IoT Broker
+To arrive at a running IoT Broker installation, the following steps need to be completed:
+1. Compile the IoT Broker bundles as described above
+2. Open the file *IoTBroker-runner/configuration/config.ini*. The parameter *dir.config* needs to be changed so that it points inside
+the location of the *fiwareRelease* folder. For example, if this project has been cloned to C:\Aeron on a Windows machine, then the 
+line has to be changed to *dir.config=C://Aeron//fiwareRelease*.
+3. Run the IoT Broker by running one of the startup scripts for Windows or Unix in the *IoTBroker-runner* folder.
+
+Using the Black Box Test
+---
+While individual classes of the IoT Broker are already tested during compilation with Maven, the project *iotplatform.iotbroker.blackboxtest* is a dedicated black box test for a running instance of the IoT Broker using server mocks. It is based on the JUNIT-Framework.
+These tests assume that the IoT Broker is listening to port 80 and communicates with an IoT Discovery component at port 8002 on localhost. This corresponds to the default configuration.
+
+To run the tests, navigate to the directory *iotplatform.iotbroker.blackboxtest* and compile the project by the command 
+
+'''
+mvn test
+'''
+
+The IoT Broker instance should be already running at the time of compilation. Please note that a deployment of IoT Broker including at least all bundles loaded by the pre-configured OSGi environment ('IoTBroker-runner' folder) is necessary for the tests to run successfully.
+
+Minimum System Requirements
 ---
 
 Minimum System Requirements:
+
 * Processor: 1 CPU 1.2 GHZ
 * RAM: 1 GB
 * DISK Space:50 MB
 * JAVA : Java 7
 * Operating System: 32 or 64-bit version Windows or Linux
-
-The administration and programming manuals for the IoT Broker can be found on the FIWARE Catalogue page,
-under the "Documentation" tab.
-
-User and Programmers Guide: https://forge.fi-ware.org/plugins/mediawiki/wiki/fiware/index.php/IoT_Broker_-_User_and_Programmers_Guide
-
-Installation and Administration Guide: https://forge.fi-ware.org/plugins/mediawiki/wiki/fiware/index.php/IoT_Broker_-_Installation_and_Administration_Guide
-
-Pre-compiled and configured binaries: 
-http://catalogue.fiware.org/enablers/iot-broker
 
 
 Bugs & Questions
